fixed the tpodashboard stat generation.... added caching also